force-app/main/default/objects/Batch_Flow_Sch__c/Batch_Flow_Sch__c.object-meta.xml
<CustomObject>
    <label>Batch Flow Sch</label>
    <nameField>
        <label>Batch Flow Sch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Flow Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>