force-app/main/default/objects/Batch_Flow_Sch__c/fields/Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Month__c</fullName>
    <label>Day of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>