force-app/main/default/objects/Batch_Flow_Sch__c/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <label>Preferred Start Time</label>
    <type>Time</type>
</CustomField>